--- a/osne.html
+++ b/osne.html
@@ -1,8 +1,13 @@
-<!DOCTYPE htm1>
-<htm1>
+<!DOCTYPE html>
+<html>
 <head>
+<title>Page Title</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>旅遊</h1>
+<p>來台東之後，就開始出去旅行，例如最南點，最東點，最西點</p>
+<p>這些點都是我一個人完成的，因為沒人陪我去...</p>
+<hr>
+<img src="IMG_5067.HEIC">
 </body>
-</htm1>
+</html>
